--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tocktimer": "^1.0.7"
   },
   "dependencies": {
+    "markovchain-generate": "^1.0.11",
     "midi-node": "^0.1.13",
     "noteplayer": "^1.1.9",
     "soundfont-player": "^0.6.1",
