--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "d3": "^3.5.16",
+    "markov": "0.0.7",
     "markovchain-generate": "^1.0.11",
     "midi-node": "^0.1.13",
     "noteplayer": "^1.1.9",
